--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c",
+    "eslint": "eslint ./lib/jsonp.js",
     "prepublish": "npm run build"
   },
   "repository": {
