--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "changzhn-jsonp",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "main": "./build/jsonp.js",
   "scripts": {
@@ -24,14 +24,17 @@
     "url": "https://github.com/Joo-fanChang/zhn-jsonp/issues"
   },
   "homepage": "https://github.com/Joo-fanChang/zhn-jsonp#readme",
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1"
+  },
   "dependencies": {
     "babel-core": "^6.26.3",
     "rollup": "^0.62.0",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-json": "^3.0.0",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-uglify": "^4.0.0"
+    "rollup-plugin-minify-es": "^1.1.1",
+    "rollup-plugin-node-resolve": "^3.3.0"
   }
 }
